# mos-ci-deployment-scripts

./: .gitignore  .gitreview  3_controllers_2compute_neutronVLAN_and_ceph_env.yaml  3_controllers_2compute_neutronVLAN_env.yaml  3_controllers_2compute_neutronVxLAN_and_ceph_env.yaml  3_controllers_2compute_neutronVxLAN_env.yaml  3_controllers_2compute_neutron_env_template.yaml  README.md  __init__.py  deploy_env.py  deploy_env.sh  deploy_template.sh  ironic.patch  mos_tests.yaml  mos_tests_template.yaml  openrc  plugins.yaml  prepare.sh  tempest_tests_env_template.yaml  test_deploy_env.py  tox.ini
common/: macros.yaml  prepare_env.sh  (+1 more)
mos-components-ci/: README.md  add_to_virnets.sh  delete_vms.sh  launch.sh  network_check.sh  run_tests.sh  setup.cfg  setup.py  tox.ini
mos-components-ci/actions/: add_iso_to_glance.sh  deploy_env.sh  download_snapshot.sh  iso_grabber.sh  master-node-create-and-install.sh  prepare-environment.sh  rally_docker.sh  simple_rally.sh  slave-nodes-create-and-boot.sh  tests_helper.sh
mos-components-ci/componentspython/: componentshttp.py  conf_filter.py  configure_env.py  iso_grabber.py  nailgun.py  nailgun_client.py  product_jenkins.py  requirements.txt  testrail.py  testrail_client.py  testrail_send.py  testrail_settings.py
mos-components-ci/componentspython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
mos-components-ci/etc/: default_config.sh  iso_grabber.conf  iso_settings.py
mos-components-ci/functions/: product.sh  regenerate_centos_repo.sh  regenerate_ubuntu_repo.sh  resources.sh  versions.awk  vm.sh
(+656 files in other folders)
