[metadata]
name = componentspython
version = 0.1
summary = Framework for MOS components CI
author = Rovachev Vadim
author-email = vrovachev@mirantis.com

[bdist_wheel]
universal=1

[files]
packages =
    componentspython

[entry_points]
console_scripts =
    controller_ip = componentspython.nailgun:return_controller_ip
    job_parameters = componentspython.nailgun:return_job_parameters
    get_node_type = componentspython.nailgun:get_node_type
    deploy_cluster = componentspython.nailgun:main
    configure_env = componentspython.configure_env:main
